# BEM

./: .gitignore  pyproject.toml  yaw_turbU.csv
MITBEM/: BEM.py  BEMSolution.py  ReferenceTurbines.py  ThrustInduction.py  TipLoss.py  Turbine.py  Utilities.py  Windfield.py
examples/: example_01_basic_BEM.py  example_01_basic_BEM_storm.py  example_02_radial_distribution.py  example_03_yawed_distributions.py  example_04_optimal_setpoint.py  example_05_pitch_tsr_surface.py  example_06_power_curve.py  example_07_shear_veer.py  yawed_distributions_animation.py
mit_bem/: BEM.py  BEMCore.py  BEMOut.py  BEM_new.py  ThrustInduction.py  TipLoss.py  Turbine.py  Turbine2.py  Utilities.py  Windfarm.py  Windfield.py
src/: BEM_vs_actuator_disk.py  Ctprime_frontier.py  Optimizations.py  a_ct_yawed_relation.py  analyze_pitch_tsr_yaw.py  calc_k.py  derate_frontier.py  find_optimal_setpoint.py  optimal_at_different_yaw.py  power_curve_noyaw.py  rotor_airfoils.py  rotor_bem.py  rotor_bem_3d_distribution.py  rotor_bem_distributions.py  rotor_bem_tsr_pitch.py  rotor_bem_tsr_pitch_vs_wsp.py  rotor_bem_vs_yaw.py  rotor_chordtwist.py  shear_veer.py  test.py  wakes_2_turbine_optimal.py  wakes_simple_windfarm.py  wakes_single_turbine.py  wakes_wind_dir_sweep.py  wakes_wind_dir_sweep_optimals.py
