[tool.poetry]
name = "mit-bem"
version = "0.1.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
readme = "README.md"
packages = [{include = "mit_bem"}]

[tool.poetry.dependencies]
python = ">=3.7.1, <=3.9"
numpy = ">=1.16.5, <1.23.0"
scipy = ">=1.6, <1.7.3"

matplotlib = "^3.4"
pandas = ">=1.2.1, <1.3.1"
tqdm = "^4.65.0"
typing-extensions = "^4.6.3"
pyyaml = "^6.0"


[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^23.3.0"
ipython = "^7"
snakeviz = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
